# OpenTargetedSentiment

./: README.md
NNCRF-MultiInputFormat/: .cproject  .project  CMakeLists.txt  DcombCRFMMLabeler.cpp  DcombCRFMMLabeler.h  DenseCRFMMLabeler.cpp  DenseCRFMMLabeler.h  DiscreteCRFMMLabeler.cpp  DiscreteCRFMMLabeler.h  MultiDcombCRFMMLabeler.cpp  MultiDcombCRFMMLabeler.h  MultiDenseCRFMMLabeler.cpp  MultiDenseCRFMMLabeler.h  MultiDiscreteCRFMMLabeler.cpp  MultiDiscreteCRFMMLabeler.h  Options.h
NNCRF-MultiInputFormat/basic/: DcombCRFMMClassifier.h  DenseCRFMMClassifier.h  DiscreteCRFMMClassifier.h  Feature.h  Instance.h  InstanceReader.h  InstanceWriter.h  Metric.h  MultiDcombCRFMMClassifier.h  MultiDenseCRFMMClassifier.h  MultiDiscreteCRFMMClassifier.h  MyLib.h  Pipe.h  TriHidderLayer.h  UniHidderLayer.h  Utiltensor.h
NNCRF-SingleInputFormat/: .cproject  CMakeLists.txt  Options.h  Sparse2TNNCRFMMLabeler.cpp  Sparse2TNNCRFMMLabeler.h  SparseCRFMMLabeler.cpp  SparseCRFMMLabeler.h
NNCRF-SingleInputFormat/basic/: Alphabet.h  BiHidderLayer.h  Feature.h  Instance.h  InstanceReader.h  MyLib.h  Sparse2TNNCRFMMClassifier.h  SparseCRFMMClassifier.h  SparseUniHidderLayer.h  Utiltensor.h
OSentMultiInputFormat/: CMakeLists.txt  DcombCRFMMLabeler.cpp  DcombCRFMMLabeler.h  DenseCRFMMLabeler.cpp  DenseCRFMMLabeler.h  DiscreteCRFMMLabeler.cpp  DiscreteCRFMMLabeler.h  MultiDcombCRFMMLabeler.cpp  MultiDcombCRFMMLabeler.h  MultiDenseCRFMMLabeler.cpp  MultiDenseCRFMMLabeler.h  MultiDiscreteCRFMMLabeler.cpp  MultiDiscreteCRFMMLabeler.h  Options.h
OSentMultiInputFormat/basic/: DcombCRFMMClassifier.h  DenseCRFMMClassifier.h  DiscreteCRFMMClassifier.h  Example.h  Feature.h  Instance.h  InstanceReader.h  InstanceWriter.h  MultiCRFLoss.h  MultiDcombCRFMMClassifier.h  MultiDenseCRFMMClassifier.h  MultiDiscreteCRFMMClassifier.h  SingleCRFLoss.h
OSentSingleInputFormat/: CMakeLists.txt  Options.h  SparseCRFMMLabeler.cpp  SparseCRFMMLabeler.h  SparseTNNCRFMMLabeler.cpp  SparseTNNCRFMMLabeler.h  TNNCRFMMLabeler.cpp  TNNCRFMMLabeler.h
OSentSingleInputFormat/basic/: Feature.h  Instance.h  InstanceReader.h  SparseTNNCRFMMClassifier.h  TNNCRFMMClassifier.h
configs/: option.collapsed.combine  option.collapsed.dense  option.jb.crf  option.jlt.crf  option.jnb.crf  option.jnlt.crf  option.joint.combine  option.joint.dense  option.joint.sparse  option.jt.crf  option.pb.crf  option.pipener.sparse  option.plt.crf  option.pnb.crf  option.pnlt.crf  option.pt.crf
data/english/: dev10.nn  dev2.nn  dev3.nn  dev4.nn  dev5.nn  dev6.nn  dev7.nn  (+11 more)
scripts/: command-joint.sh  command-ner.sh  command-nersen.sh  command-sen.sh  command-senner.sh  command-span.sh  command-spanjoint.sh  command-spansen.sh
